--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,6 @@
 {
     "Quick Save": "Quick Save",
-    "Click the shield to save as a private group": "Click the shield to save as a private group"
+    "Click the shield to save as a private group": "Click the shield to save as a private group",
+    "Something went wrong! No group selected": "Something went wrong! No group selected",
+    "Back": "Back"
 }
