--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -1,5 +1,6 @@
 {
     "Quick Save": "Quick Save",
     "Click the shield to save as a private group": "Click the shield to save as a private group",
-    "Something went wrong! No group selected": "Something went wrong! No group selected"
+    "Something went wrong! No group selected": "Something went wrong! No group selected",
+    "Do you want to delete the group?": "Do you want to delete the group?"
 }
