--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -5,5 +5,7 @@
     "Do you want to delete the group?": "Do you want to delete the group?",
     "Yes": "Yes",
     "No": "No",
-    "There are no links in this group": "There are no links in this group"
+    "There are no links in this group": "There are no links in this group",
+    "Select Tabs": "Select Tabs",
+    "Select tabs that you want to include into the group": "Select tabs that you want to include into the group"
 }
