Add Cancel button for SelectTabs.vue

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -8,6 +8,6 @@
     "There are no links in this group": "There are no links in this group",
     "Select Tabs": "Select Tabs",
     "Click on each tab to select or unselect it for saving to memory": "Click on each tab to select or unselect it for saving to memory",
-    "Select All Tabs": "Select All Tabs",
-    "Deselect All Tabs": "Deselect All Tabs"
+    "Select all": "Select all",
+    "Deselect all": "Deselect all"
 }
