--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -9,5 +9,6 @@
     "Select Tabs": "Select Tabs",
     "Click on each tab to select or unselect it for saving to memory": "Click on each tab to select or unselect it for saving to memory",
     "Select all": "Select all",
-    "Deselect all": "Deselect all"
+    "Deselect all": "Deselect all",
+    "Save": "Save"
 }
