Add "No groups" message

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -12,5 +12,6 @@
     "Deselect all": "Deselect all",
     "Save": "Save",
     "Cancel": "Cancel",
-    "No tabs found": "No tabs found"
+    "No tabs found": "No tabs found",
+    "There are no groups yet": "There are no groups yet"
 }
