WIP on settings

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -13,5 +13,6 @@
     "Save": "Save",
     "Cancel": "Cancel",
     "No tabs found": "No tabs found",
-    "There are no groups yet": "There are no groups yet"
+    "There are no groups yet": "There are no groups yet",
+    "Settings": "Settings"
 }
