--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -14,5 +14,7 @@
     "Cancel": "Cancel",
     "No tabs found": "No tabs found",
     "There are no groups yet": "There are no groups yet",
-    "Settings": "Settings"
+    "Settings": "Settings",
+    "Private Password": "Private Password",
+    "Choose a secret password for your private groups. Any time when you want to access a private group, you will need to enter this password": "Choose a secret password for your private groups. Any time when you want to access a private group, you will need to enter this password"
 }
