--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -22,5 +22,6 @@
     "Add more links": "Add more links",
     "Delete this group": "Delete this group",
     "Rename this group": "Rename this group",
-    "Additional options": "Additional options"
+    "Additional options": "Additional options",
+    "Enter a group name": "Enter a group name"
 }
