Add creating new group

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -23,5 +23,6 @@
     "Delete this group": "Delete this group",
     "Rename this group": "Rename this group",
     "Additional options": "Additional options",
-    "Enter a group name": "Enter a group name"
+    "Enter a group name": "Enter a group name",
+    "Group name": "Group name"
 }
