WIP on "enter password" in group view

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -24,5 +24,7 @@
     "Rename this group": "Rename this group",
     "Additional options": "Additional options",
     "Enter a group name": "Enter a group name",
-    "Group name": "Group name"
+    "Group name": "Group name",
+    "Enter a password": "Enter a password",
+    "Enter a password to decrypt the content of this group": "Enter a password to decrypt the content of this group"
 }
