--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -26,5 +26,7 @@
     "Enter a group name": "Enter a group name",
     "Group name": "Group name",
     "Enter a password": "Enter a password",
-    "Enter a password to temporarily decrypt the content of this group": "Enter a password to temporarily decrypt the content of this group"
+    "Enter a password to temporarily decrypt the content of this group": "Enter a password to temporarily decrypt the content of this group",
+    "This group is only temporary decrypted. It will be encrypted again after you close the popup window": "This group is only temporary decrypted. It will be encrypted again after you close the popup window",
+    "Got it": "Got it"
 }
