--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -28,5 +28,9 @@
     "Enter a password": "Enter a password",
     "Enter a password to temporarily decrypt the content of this group": "Enter a password to temporarily decrypt the content of this group",
     "This group is only temporary decrypted. It will be encrypted again after you close the popup window": "This group is only temporary decrypted. It will be encrypted again after you close the popup window",
-    "Got it": "Got it"
+    "Got it": "Got it",
+    "Please enter a password": "Please enter a password",
+    "Incorrect password": "Incorrect password",
+    "Group temporarily decrypted": "Group temporarily decrypted",
+    "Error saving groups. Check if you password is set in the settings": "Error saving groups. Check if you password is set in the settings"
 }
