--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -33,5 +33,7 @@
     "Incorrect password": "Incorrect password",
     "Group temporarily decrypted": "Group temporarily decrypted",
     "Error saving groups. Check if you password is set in the settings": "Error saving groups. Check if you password is set in the settings",
-    "Password has been set": "Password has been set"
+    "Password has been set": "Password has been set",
+    "Error ocurred": "Error ocurred",
+    "The new name has been saved": "The new name has been saved"
 }
