--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -26,7 +26,7 @@
     "Enter a group name": "Enter a group name",
     "Group name": "Group name",
     "Enter a password": "Enter a password",
-    "Enter a password to temporarily decrypt the content of this group": "Enter a password to temporarily decrypt the content of this group",
+    "Enter a password to decrypt the content of this group": "Enter a password to decrypt the content of this group",
     "Got it": "Got it",
     "Please enter a password": "Please enter a password",
     "Incorrect password": "Incorrect password",
