feat: Improve toast message for group decryption

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -30,7 +30,7 @@
     "Got it": "Got it",
     "Please enter a password": "Please enter a password",
     "Incorrect password": "Incorrect password",
-    "Group temporarily decrypted": "Group temporarily decrypted",
+    "Group decrypted": "Group decrypted",
     "Error saving groups. Check if you password is set in the settings": "Error saving groups. Check if you password is set in the settings",
     "Password has been set": "Password has been set",
     "Error ocurred": "Error ocurred",
