--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -34,5 +34,8 @@
     "Password has been set": "Password has been set",
     "Error ocurred": "Error ocurred",
     "The new name has been saved": "The new name has been saved",
-    "This group is private. You need to unlock it to see the links": "This group is private. You need to unlock it to see the links"
+    "This group is private. You need to unlock it to see the links": "This group is private. You need to unlock it to see the links",
+    "Group has not been found": "Group has not been found",
+    "Group is already encrypted": "Group is already encrypted",
+    "Password is empty. Make sure to set a password in the settings": "Password is empty. Make sure to set a password in the settings"
 }
