Change encrypt to lock words

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -26,16 +26,16 @@
     "Enter a group name": "Enter a group name",
     "Group name": "Group name",
     "Enter a password": "Enter a password",
-    "Enter a password to decrypt the content of this group": "Enter a password to decrypt the content of this group",
+    "Enter a password to unlock the content of this group": "Enter a password to unlock the content of this group",
     "Got it": "Got it",
     "Please enter a password": "Please enter a password",
     "Incorrect password": "Incorrect password",
-    "Group is decrypted": "Group is decrypted",
+    "Group is locked": "Group is locked",
     "Password has been set": "Password has been set",
     "Error ocurred": "Error ocurred",
     "The new name has been saved": "The new name has been saved",
     "This group is private. You need to unlock it to see the links": "This group is private. You need to unlock it to see the links",
     "Group has not been found": "Group has not been found",
-    "Group is already encrypted": "Group is already encrypted",
+    "Group is already locked": "Group is already locked",
     "Password is empty. Make sure to set a password in the settings": "Password is empty. Make sure to set a password in the settings"
 }
