Add unlocking the group

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -30,6 +30,7 @@
     "Got it": "Got it",
     "Please enter a password": "Please enter a password",
     "Incorrect password": "Incorrect password",
+    "Group is unlocked": "Group is unlocked",
     "Group is locked": "Group is locked",
     "Password has been set": "Password has been set",
     "Error ocurred": "Error ocurred",
