Add stashing and closing tabs

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -42,6 +42,6 @@
     "This private group is unlocked": "This private group is unlocked",
     "Lock": "Lock",
     "No tabs to save": "No tabs to save",
-    "Tabs saved": "Tabs saved",
+    "Tabs have been saved": "Tabs have been saved",
     "Tabs opened and group deleted": "Tabs opened and group deleted"
 }
