Change some modules to be common

--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -1,4 +1,4 @@
 {
-    "Change the extension configurations here": "Change the extension configurations here",
-    "Settings": "Settings"
+    "Settings": "Settings",
+    "Change the extension configurations here": "Change the extension configurations here"
 }
