--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -1,4 +1,8 @@
 {
     "Settings": "Settings",
-    "Change the extension configurations here": "Change the extension configurations here"
+    "Change the extension configurations here": "Change the extension configurations here",
+    "Choose a secret password for your private groups. Any time when you want to access a private group, you will need to enter this password": "Choose a secret password for your private groups. Any time when you want to access a private group, you will need to enter this password",
+    "Enter password": "Enter password",
+    "Private Password": "Private Password",
+    "Password has been set": "Password has been set"
 }
