--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -38,5 +38,6 @@
     "Lock": "Lock",
     "No tabs to save": "No tabs to save",
     "Tabs have been saved": "Tabs have been saved",
-    "Tabs opened and group deleted": "Tabs opened and group deleted"
+    "Tabs opened and group deleted": "Tabs opened and group deleted",
+    "To create a private group, you need to set a password in settings": "To create a private group, you need to set a password in settings"
 }
