Add a setting to lock the group back after restore

--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -13,5 +13,7 @@
     "Password changed successfully": "Password changed successfully",
     "Update password": "Update password",
     "Save password": "Save password",
-    "Additional Options": "Additional Options"
+    "Additional Options": "Additional Options",
+    "Lock the group back after restoring the links": "Lock the group back after restoring the links",
+    "Settings have been updated": "Settings have been updated"
 }
