Add encrypting group after restore

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -45,5 +45,6 @@
     "Tabs added to the group": "Tabs added to the group",
     "Group created without any tabs selected": "Group created without any tabs selected",
     "Group created with tabs": "Group created with tabs",
-    "Close selected tabs": "Close selected tabs"
+    "Close selected tabs": "Close selected tabs",
+    "Tabs opened": "Tabs opened"
 }
