WIP on erase sectin

--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -15,5 +15,7 @@
     "Save password": "Save password",
     "Additional Options": "Additional Options",
     "Lock the group back after restoring the links": "Lock the group back after restoring the links",
-    "Settings have been updated": "Settings have been updated"
+    "Settings have been updated": "Settings have been updated",
+    "Erase all groups": "Erase all groups",
+    "I confirm that I want to delete all groups": "I confirm that I want to delete all groups"
 }
