--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -1,26 +1,13 @@
 {
     "Settings": "Settings",
     "Change the extension configurations here": "Change the extension configurations here",
-    "Choose a secret password for your private groups. Any time when you want to access a private group, you will need to enter this password": "Choose a secret password for your private groups. Any time when you want to access a private group, you will need to enter this password",
-    "Enter password": "Enter password",
-    "Private Password": "Private Password",
-    "Password has been set": "Password has been set",
-    "Password cannot be empty": "Password cannot be empty",
-    "Change Password": "Change Password",
-    "Enter your current password": "Enter your current password",
-    "Enter a new password": "Enter a new password",
-    "You entered the wrong password": "You entered the wrong password",
-    "Password changed successfully": "Password changed successfully",
-    "Update password": "Update password",
-    "Save password": "Save password",
     "Additional Options": "Additional Options",
     "Lock the group back after restoring the links": "Lock the group back after restoring the links",
     "Settings have been updated": "Settings have been updated",
     "Erase all groups": "Erase all groups",
     "I confirm that I want to delete all groups": "I confirm that I want to delete all groups",
-    "Confirm that you want to delete all groups": "Confirm that you want to delete all groups",
+    "Confirm that you want to delete all non-private groups": "Confirm that you want to delete all non-private groups",
     "All groups have been deleted": "All groups have been deleted",
-    "You have private groups, please enter password to delete all groups": "You have private groups, please enter password to delete all groups",
     "Enter password to delete all groups": "Enter password to delete all groups",
     "Password is incorrect": "Password is incorrect"
 }
