Remove the old logic with password

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -24,7 +24,6 @@
     "Group name": "Group name",
     "Enter a password to unlock the content of this group": "Enter a password to unlock the content of this group",
     "Got it": "Got it",
-    "Please enter a password": "Please enter a password",
     "Incorrect password": "Incorrect password",
     "Group is unlocked": "Group is unlocked",
     "Group is locked": "Group is locked",
@@ -33,12 +32,11 @@
     "This group is private. You need to unlock it to see the links": "This group is private. You need to unlock it to see the links",
     "Group has not been found": "Group has not been found",
     "Group is already locked": "Group is already locked",
-    "Password is empty. Make sure to set a password in the settings": "Password is empty. Make sure to set a password in the settings",
+    "Password is empty": "Password is empty",
     "This private group is unlocked": "This private group is unlocked",
     "Lock": "Lock",
     "No tabs to save": "No tabs to save",
     "Tabs have been saved": "Tabs have been saved",
-    "To create a private group, you need to set a password in settings": "To create a private group, you need to set a password in settings",
     "Create the group": "Create the group",
     "You haven't selected any tabs": "You haven't selected any tabs",
     "Tabs added to the group": "Tabs added to the group",
