--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -7,7 +7,6 @@
     "Erase all groups": "Erase all groups",
     "I confirm that I want to delete all groups": "I confirm that I want to delete all groups",
     "Confirm that you want to delete all non-private groups": "Confirm that you want to delete all non-private groups",
-    "All groups have been deleted": "All groups have been deleted",
-    "Enter password to delete all groups": "Enter password to delete all groups",
+    "All the non-private groups have been deleted": "All the non-private groups have been deleted",
     "Password is incorrect": "Password is incorrect"
 }
