WIP on refactoring password logic

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -43,5 +43,6 @@
     "Group created without any tabs selected": "Group created without any tabs selected",
     "Group created with tabs": "Group created with tabs",
     "Close selected tabs": "Close selected tabs",
-    "Tabs opened": "Tabs opened"
+    "Tabs opened": "Tabs opened",
+    "Group password": "Group password"
 }
