WIP on binding group to URL

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -49,6 +49,8 @@
     "Wait before trying again": "Wait before trying again",
     "Too many attempts. Locked for :n minutes": "Too many attempts. Locked for :n minutes",
     "Too many attempts. Next attempt in :n minutes": "Too many attempts. Next attempt in :n minutes",
-    "Bind to this host": "Bind to this host",
-    "Private groups are secure and use encryption. Only users with the password can access them": "Private groups are secure and use encryption. Only users with the password can access them"
+    "Bind to this URL": "Bind to this URL",
+    "Private groups are secure and use encryption. Only users with the password can access them": "Private groups are secure and use encryption. Only users with the password can access them",
+    "Bind this group to the (:n) URL. This will hide the group from everywhere else except this URL. It adds an extra layer of security": "Bind this group to the (:n) URL. This will hide the group from everywhere else except this URL. It adds an extra layer of security",
+    "This feature doesn't work for this current URL": "This feature doesn't work for this current URL"
 }
