Add some tooltips

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -29,6 +29,10 @@
     "Group is locked": "Group is locked",
     "Group is locked with the same password": "Group is locked with the same password",
     "Error ocurred": "Error ocurred",
+    "Open tabs": "Open tabs",
+    "Open tabs and delete this group": "Open tabs and delete this group",
+    "Copy tabs into this group": "Copy tabs into this group",
+    "Move tabs into this group": "Move tabs into this group",
     "The new name has been saved": "The new name has been saved",
     "This group is private. You need to unlock it to see the links": "This group is private. You need to unlock it to see the links",
     "Group has not been found": "Group has not been found",
