Add storage usage showing in sidebar

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -58,5 +58,6 @@
     "Bind this group to the (:n) URL. This will hide the group from everywhere else except this URL. It adds an extra layer of security": "Bind this group to the (:n) URL. This will hide the group from everywhere else except this URL. It adds an extra layer of security",
     "Extension Author": "Extension Author",
     "Rate Us": "Rate Us",
+    "Storage usage": "Storage usage",
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL"
 }
