--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -59,5 +59,6 @@
     "Extension Author": "Extension Author",
     "Rate Us": "Rate Us",
     "Storage usage": "Storage usage",
+    "Group name is too long": "Group name is too long",
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL"
 }
