Change sync storage to local

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -60,5 +60,6 @@
     "Rate Us": "Rate Us",
     "Storage usage": "Storage usage",
     "Group name is too long": "Group name is too long",
+    "bytes": "bytes",
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL"
 }
