--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -61,5 +61,6 @@
     "Storage usage": "Storage usage",
     "Group name is too long": "Group name is too long",
     "bytes": "bytes",
+    "Contribute": "Contribute",
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL"
 }
