feat: add "release notes" link to sidebar

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -62,5 +62,6 @@
     "Group name is too long": "Group name is too long",
     "bytes": "bytes",
     "Contribute": "Contribute",
+    "Release Notes": "Release Notes",
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL"
 }
