--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -11,5 +11,6 @@
     "Show private groups only in browser incognito mode": "Show private groups only in browser incognito mode",
     "Settings have been saved": "Settings have been saved",
     "Go to the extension settings and enable the option 'Allow in incognito' or 'Allow in Private'": "Go to the extension settings and enable the option 'Allow in incognito' or 'Allow in Private'",
-    "If the new group name matches an existing one, override it": "If the new group name matches an existing one, override it"
+    "If the new group name matches an existing one, override it": "If the new group name matches an existing one, override it",
+    "Show only private groups in browser incognito mode": "Show only private groups in browser incognito mode"
 }
