WIP on group icon

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -63,5 +63,7 @@
     "bytes": "bytes",
     "Contribute": "Contribute",
     "Release Notes": "Release Notes",
+    "Change Icon": "Change Icon",
+    "Choose a group icon": "Choose a group icon",
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL"
 }
