Add showing icon on main page

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -65,5 +65,6 @@
     "Release Notes": "Release Notes",
     "Change Icon": "Change Icon",
     "Choose a group icon": "Choose a group icon",
+    "Icon has been set": "Icon has been set",
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL"
 }
