WIP on ExportSection

--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -12,5 +12,7 @@
     "Settings have been saved": "Settings have been saved",
     "Go to the extension settings and enable the option 'Allow in incognito' or 'Allow in Private'": "Go to the extension settings and enable the option 'Allow in incognito' or 'Allow in Private'",
     "If the new group name matches an existing one, override it": "If the new group name matches an existing one, override it",
-    "Show only private groups in browser incognito mode. It means that public groups will be hidden in incognito mode": "Show only private groups in browser incognito mode. It means that public groups will be hidden in incognito mode"
+    "Show only private groups in browser incognito mode. It means that public groups will be hidden in incognito mode": "Show only private groups in browser incognito mode. It means that public groups will be hidden in incognito mode",
+    "Export all the Data": "Export all the Data",
+    "Export everything": "Export everything"
 }
