--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -13,6 +13,10 @@
     "Go to the extension settings and enable the option 'Allow in incognito' or 'Allow in Private'": "Go to the extension settings and enable the option 'Allow in incognito' or 'Allow in Private'",
     "If the new group name matches an existing one, override it": "If the new group name matches an existing one, override it",
     "Show only private groups in browser incognito mode. It means that public groups will be hidden in incognito mode": "Show only private groups in browser incognito mode. It means that public groups will be hidden in incognito mode",
-    "Export all the Data": "Export all the Data",
-    "Export everything": "Export everything"
+    "Export Tab Groups": "Export Tab Groups",
+    "Export everything": "Export everything",
+    "Securely export all of your tab groups and encrypt them with a password": "Securely export all of your tab groups and encrypt them with a password",
+    "No groups to export": "No groups to export",
+    "One time password": "One time password",
+    "It will be used to encrypt the exported data": "It will be used to encrypt the exported data"
 }
