Add confirm password when creating new group

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -66,5 +66,6 @@
     "Change Icon": "Change Icon",
     "Choose a group icon": "Choose a group icon",
     "Icon has been set": "Icon has been set",
-    "This feature doesn't work for this current URL": "This feature doesn't work for this current URL"
+    "This feature doesn't work for this current URL": "This feature doesn't work for this current URL",
+    "Repeat password": "Repeat password"
 }
