chore: Update password validation error message to match translation

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -67,5 +67,6 @@
     "Choose a group icon": "Choose a group icon",
     "Icon has been set": "Icon has been set",
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL",
-    "Repeat password": "Repeat password"
+    "Repeat password": "Repeat password",
+    "Passwords do not match": "Passwords do not match"
 }
