Fix errors with locking private groups

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -40,6 +40,7 @@
     "Password is empty": "Password is empty",
     "This private group is unlocked": "This private group is unlocked",
     "Lock": "Lock",
+    "Lock the group": "Lock the group",
     "No tabs to save": "No tabs to save",
     "Tabs have been saved": "Tabs have been saved",
     "Create the group": "Create the group",
